<resources>
    <string name="app_name">VisibleOneCodingTest</string>
    <string name="live_your_perfect">Live Your\nPerfect</string>
    <string name="start">Start</string>
    <string name="smart_gorgeous_amp_fashionable_collection_makes_you_cool"><![CDATA[Smart, gorgeous & fashionable \n collection makes you cool]]></string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="saved_items">Saved Items</string>
    <string name="search">Search</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="popular">Popular</string>
    <string name="size">Size:</string>
    <string name="us">US</string>
    <string name="eu">EU</string>
    <string name="uk">UK</string>
    <string name="description">Description</string>
    <string name="free_delivery_and_returns">Free Delivery and Returns</string>
    <string name="quantity">Quantity</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
</resources>