<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/savedFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.test.visibleonecodingtest.fragments.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/cartFragment"
        android:name="com.test.visibleonecodingtest.fragments.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/savedFragment"
        android:name="com.test.visibleonecodingtest.fragments.SavedFragment"
        android:label="@string/saved_items"
        tools:layout="@layout/fragment_saved" />

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.test.visibleonecodingtest.fragments.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />

</navigation>
