<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium_1"
        android:background="@drawable/bg_circle_white"
        android:padding="@dimen/margin_medium_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_heart" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/margin_medium_1"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/btn_add_to_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_shoe"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginTop="@dimen/margin_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo_nike" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_1"
                android:layout_marginTop="@dimen/margin_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_shoe" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium_1"
                android:text="(4.7)"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_shoe" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_small"
                app:layout_constraintEnd_toStartOf="@id/tv_rating"
                app:layout_constraintTop_toBottomOf="@id/iv_shoe"
                app:srcCompat="@drawable/ic_star" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_1"
                android:layout_marginTop="@dimen/margin_medium"
                android:textColor="@color/black"
                android:textSize="@dimen/text_regular_3"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_category" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_medium_1"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/tv_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lbl_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_1"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/size"
                android:textColor="@color/black"
                android:textSize="@dimen/text_regular_2x"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_eu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium_1"
                android:text="@string/eu"
                android:textColor="@color/black"
                android:textSize="@dimen/text_regular_2x"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_uk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_small"
                android:text="@string/uk"
                android:textColor="@color/black"
                android:textSize="@dimen/text_regular_2x"
                app:layout_constraintEnd_toStartOf="@id/tv_eu"
                app:layout_constraintTop_toBottomOf="@id/tv_name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_small"
                android:text="@string/us"
                android:textColor="@color/black"
                android:textSize="@dimen/text_regular_2x"
                app:layout_constraintEnd_toStartOf="@id/tv_uk"
                app:layout_constraintTop_toBottomOf="@id/tv_name" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_medium"
                android:clipToPadding="false"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbl_size"
                tools:listitem="@layout/item_size" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lbl_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_1"
                android:layout_marginTop="@dimen/margin_medium_1"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="@dimen/text_regular_2x"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_size" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_more_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_medium_1"
                app:layout_constraintBottom_toBottomOf="@id/lbl_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/lbl_description"
                app:srcCompat="@drawable/ic_down_arrow" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/description_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="@dimen/margin_medium_1"
                android:layout_marginTop="@dimen/margin_medium_1"
                app:layout_constraintTop_toBottomOf="@id/lbl_description" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lbl_delivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_1"
                android:layout_marginTop="@dimen/margin_medium_1"
                android:text="@string/free_delivery_and_returns"
                android:textColor="@color/black"
                android:textSize="@dimen/text_regular_2x"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description_divider" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_more_delivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_medium_1"
                app:layout_constraintBottom_toBottomOf="@id/lbl_delivery"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/lbl_delivery"
                app:srcCompat="@drawable/ic_down_arrow" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/delivery_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="@dimen/margin_medium_1"
                android:layout_marginTop="@dimen/margin_medium_1"
                app:layout_constraintTop_toBottomOf="@id/lbl_delivery" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_white"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="@dimen/margin_medium_1"
                android:layout_marginTop="@dimen/margin_medium_1"
                android:background="@drawable/bg_circle_white"
                android:padding="@dimen/margin_medium_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/delivery_divider"
                app:srcCompat="@drawable/ic_tick" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_black"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="@dimen/margin_medium_1"
                android:layout_marginTop="@dimen/margin_medium_1"
                android:background="@drawable/bg_circle_white"
                android:backgroundTint="@color/black"
                android:padding="@dimen/margin_medium_1"
                app:layout_constraintStart_toEndOf="@id/iv_white"
                app:layout_constraintTop_toBottomOf="@id/delivery_divider" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_green"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="@dimen/margin_medium_1"
                android:layout_marginTop="@dimen/margin_medium_1"
                android:background="@drawable/bg_circle_white"
                android:backgroundTint="@color/green"
                android:padding="@dimen/margin_medium_1"
                app:layout_constraintStart_toEndOf="@id/iv_black"
                app:layout_constraintTop_toBottomOf="@id/delivery_divider" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_purple"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="@dimen/margin_medium_1"
                android:layout_marginTop="@dimen/margin_medium_1"
                android:background="@drawable/bg_circle_white"
                android:backgroundTint="@color/purple"
                android:padding="@dimen/margin_medium_1"
                app:layout_constraintStart_toEndOf="@id/iv_green"
                app:layout_constraintTop_toBottomOf="@id/delivery_divider" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lbl_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_1"
                android:layout_marginTop="@dimen/margin_medium_1"
                android:layout_marginBottom="@dimen/margin_medium_1"
                android:text="@string/quantity"
                android:textColor="@color/black"
                android:textSize="@dimen/text_regular_2x"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_medium_1"
                android:text="1"
                android:textColor="@color/black"
                android:textSize="@dimen/text_regular_2x"
                app:layout_constraintBottom_toBottomOf="@id/lbl_quantity"
                app:layout_constraintEnd_toStartOf="@id/tv_plus"
                app:layout_constraintTop_toTopOf="@id/lbl_quantity" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_plus"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="@dimen/margin_medium_1"
                android:background="@drawable/bg_circle_white"
                android:text="@string/plus"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/text_regular_2x"
                app:layout_constraintBottom_toBottomOf="@id/lbl_quantity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/lbl_quantity" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_minus"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="@dimen/margin_medium_1"
                android:background="@drawable/bg_circle_white"
                android:text="@string/minus"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/text_regular_2x"
                app:layout_constraintBottom_toBottomOf="@id/lbl_quantity"
                app:layout_constraintEnd_toStartOf="@id/tv_quantity"
                app:layout_constraintTop_toTopOf="@id/lbl_quantity" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_to_cart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium_2"
        android:paddingVertical="@dimen/margin_medium_2"
        android:text="@string/add_to_cart"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_regular_2x"
        app:backgroundTint="@color/colorPrimary"
        app:cornerRadius="@dimen/margin_medium_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>